--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
+    "ftp": "^0.3.10",
     "ip": "^1.1.5",
     "node-schedule": "^1.3.0",
     "onoff": "^2.0.0",
