--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ip": "^1.1.5",
     "node-schedule": "^1.3.0",
     "onoff": "^2.0.0",
+    "redux": "^4.0.0",
     "serialport": "^6.0.5",
     "socket.io": "^2.0.4",
     "xlsx": "^0.12.10"
