--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": " Webserver that hosts all incoming serial data",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "nodemon --ignore configs/current.js --ignore selfLearning/individualData.json server.js"
   },
   "repository": {
     "type": "git",
