--- a/config.static.template.json
+++ b/config.static.template.json
@@ -33,14 +33,14 @@
   "onlinePin": 5,
   "enabledModules": {
     "authentication": true,
-    "FTP": false,
-    "input": false,
-    "logger": false,
-    "output": false,
+    "FTP": true,
+    "input": true,
+    "logger": true,
+    "output": true,
     "site": true,
     "selfLearning": false,
     "serial": true,
-    "table": false
+    "table": true
   },
   "version": "3.0"
 }
