--- a/config.static.template.json
+++ b/config.static.template.json
@@ -5,6 +5,7 @@
   "saveLogLocation": "/home/pi/Documents",
   "exposeUpload": false,
   "exposeShutdown": true,
+  "exposeSettings": true,
   "tableColumns": 5,
   "resetPin": 7,
   "outputPin": [
