Work done on 7-12-19

--- a/config.static.template.json
+++ b/config.static.template.json
@@ -6,6 +6,7 @@
   "exposeUpload": false,
   "exposeShutdown": true,
   "exposeSettings": true,
+  "showTolerance": false,
   "tableColumns": 5,
   "resetPin": 7,
   "outputPin": [
