Add static typing to store, reducers and actions

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@ configs/*
 logo/*
 client2/*
 selfLearning/*
+build/*
+node_modules
 !data/.gitkeep
 !configs/template.json
 !logo/.gitkeep
 !selfLearning/.gitkeep
+!build/.gitkeep
