--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "serialserver",
   "version": "1.0.0",
   "description": " Webserver that hosts all incoming serial data",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "nodemon --ignore configs/current.js --ignore selfLearning/individualData.json server.js"
+    "tsc": "tsc",
+    "dev": "ts-node-dev --respawn --transpileOnly ./server.js",
+    "prod": "tsc && node ./build/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/jwbuiter/serialserver#readme",
   "dependencies": {
+    "@types/node": "^13.1.8",
     "dateformat": "^3.0.3",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
@@ -29,6 +31,8 @@
     "redux": "^4.0.0",
     "serialport": "^6.0.5",
     "socket.io": "^2.0.4",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.7.3",
     "xlsx": "^0.12.10"
   }
 }
