apply static typing to all modules

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "serialserver",
   "version": "1.0.0",
   "description": " Webserver that hosts all incoming serial data",
-  "main": "server.js",
+  "main": "build/server.js",
   "scripts": {
+    "start" : "node ./build/server.js",
     "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpileOnly ./server.js",
-    "prod": "tsc && node ./build/app.js"
+    "dev": "ts-node-dev --respawn --transpileOnly ./server.ts",
+    "prod": "tsc && node ./build/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/jwbuiter/serialserver#readme",
   "dependencies": {
     "@types/node": "^13.1.8",
+    "@types/xlsx": "0.0.36",
     "dateformat": "^3.0.3",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
