--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@types/xlsx": "0.0.36",
     "dateformat": "^3.0.3",
     "express": "^4.16.2",
+    "express-easy-zip": "^1.1.5",
     "express-fileupload": "^0.4.0",
-    "express-zip": "^2.0.1",
     "ftp": "^0.3.10",
     "ip": "^1.1.5",
     "node-schedule": "^1.3.0",
