implement excel update and remove

--- a/config.static.template.json
+++ b/config.static.template.json
@@ -51,5 +51,7 @@
   "newCycleResetHard": false,
   "individualSLMaxEntries": 5,
   "individualSLMatchEntries": 3,
-  "version": "4.5"
+  "individualSLOverwriteExcel": false,
+  "individualSLRemoveExcel": false,
+  "version": "4.6"
 }
