use date stamp instead of time stamp for excel

--- a/config.static.template.json
+++ b/config.static.template.json
@@ -54,6 +54,6 @@
   "individualSLOverwriteExcel": false,
   "individualSLRemoveExcel": false,
   "individualSLDecrementTotal": true,
-  "saveExcelTimeStamp": true,
+  "saveExcelDateStamp": true,
   "version": "4.7"
 }
