--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node build.js",
     "build": "tsc --out build.js --module amd --moduleResolution node && sed -i '1s;^;var define = require(\"amdefine\")(module)\\;;' build.js && echo 'define.require(\"server\");' >> build.js && npm run minify",
-    "dev": "ts-node-dev --respawn --transpile-only ./server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch [data,configs] ./server.ts",
     "prod": "npm run build && npm run start",
     "minify": "uglifyjs --compress --mangle --output build.min.js -- build.js"
   },
