change default log location

--- a/config.static.template.json
+++ b/config.static.template.json
@@ -3,7 +3,7 @@
   "QS": "000 000 000",
   "port": 80,
   "baseDirectory": "/srv/serialserver",
-  "saveLogLocation": "/home/pi/Documents",
+  "saveLogLocation": "/home/mbdc/Documents",
   "configPassword": "MBDCagro22",
   "exposeUpload": false,
   "exposeShutdown": true,
